author align fixes

--- a/scss/author.scss
+++ b/scss/author.scss
@@ -40,6 +40,7 @@
             }
             .inner-content{
                 padding-left: 154px;
+                justify-content: center;
                 @media ($sm-1679){
                     padding-left: 140px;
                 }
